# agent-handson

./: .env.sample  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  logging_config.py  main.py  ops_review_agent.py  prompts.py  pyproject.toml  requirements.txt  review_agent.py  tools_action_manager.py  チュートリアル設計案.md
docs/: architecture.mmd  sequence.mmd
