[project]
name = "agent-handson"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.37",
    "a2a-sdk[http-server]>=0.3.23",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
main = "main:_cli"
review-server = "ops_review_agent:_cli"
